tests/rosetta/out/C/best-shuffle.error
cc: exit status 1
/tmp/best-shuffle.c:62:1: error: unknown type name ‘list_int’; did you mean ‘list_string’?
   62 | list_int shuffleChars(char *s, int seed) {
      | ^~~~~~~~
      | list_string
/tmp/best-shuffle.c: In function ‘shuffleChars’:
/tmp/best-shuffle.c:91:16: warning: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   91 |   tmp4.data[1] = sd;
      |                ^
/tmp/best-shuffle.c:92:10: error: incompatible types when returning type ‘list_string’ but ‘int’ was expected
   92 |   return tmp4;
      |          ^~~~
/tmp/best-shuffle.c: At top level:
/tmp/best-shuffle.c:95:1: error: unknown type name ‘list_int’; did you mean ‘list_string’?
   95 | list_int bestShuffle(char *s, int seed) {
      | ^~~~~~~~
      | list_string
/tmp/best-shuffle.c: In function ‘bestShuffle’:
/tmp/best-shuffle.c:96:3: error: unknown type name ‘list_int’; did you mean ‘list_string’?
   96 |   list_int r = shuffleChars(s, seed);
      |   ^~~~~~~~
      |   list_string
/tmp/best-shuffle.c:97:12: error: request for member ‘data’ in something not a structure or union
   97 |   int t = r.data[0];
      |            ^
/tmp/best-shuffle.c:98:13: error: request for member ‘data’ in something not a structure or union
   98 |   int sd = r.data[1];
      |             ^
/tmp/best-shuffle.c:101:15: error: request for member ‘len’ in something not a structure or union
  101 |   while (i < t.len) {
      |               ^
/tmp/best-shuffle.c:103:33: warning: passing argument 1 of ‘slice_string’ makes pointer from integer without a cast [-Wint-conversion]
  103 |     tmp5.data[0] = slice_string(t, i, i + 1);
      |                                 ^
      |                                 |
      |                                 int
/tmp/best-shuffle.c:43:33: note: expected ‘char *’ but argument is of type ‘int’
   43 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/best-shuffle.c:140:16: warning: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  140 |   tmp8.data[1] = sd;
      |                ^
/tmp/best-shuffle.c:141:16: warning: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  141 |   tmp8.data[2] = count;
      |                ^
/tmp/best-shuffle.c:142:10: error: incompatible types when returning type ‘list_string’ but ‘int’ was expected
  142 |   return tmp8;
      |          ^~~~
/tmp/best-shuffle.c: In function ‘mochi_main’:
/tmp/best-shuffle.c:157:17: error: request for member ‘data’ in something not a structure or union
  157 |     int shuf = r.data[0];
      |                 ^
/tmp/best-shuffle.c:158:13: error: request for member ‘data’ in something not a structure or union
  158 |     seed = r.data[1];
      |             ^
/tmp/best-shuffle.c:159:16: error: request for member ‘data’ in something not a structure or union
  159 |     int cnt = r.data[2];
      |                ^
/tmp/best-shuffle.c:162:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  162 |     printf("%d\n", ts.data[i] + " -> " + shuf + " (" + tmp10 + ")");
      |                    ~~~~~~~~~~ ^
      |                           |   |
      |                           |   char *
      |                           char *
